examples/shop/shipping/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shipping
  labels:
    istio.io/rev: asm-managed
