examples/shop/shipping/app-repo/k8s/base/se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: shipping
spec:
  hosts:
  - shipping.shipping.svc.cluster.local
  ports:
  - name: shipping
    number: 50051
    protocol: GRPC
  resolution: DNS
