examples/shop/shipping/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: shipping-virtualservice
    namespace: shipping
spec:
    hosts:
    - shipping.shipping.svc.cluster.local
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: shipping
          port:
            number: 80
